Fixed phone Hero alignment issue - 2

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,6 @@
     transform: scale(1.05);
   }
 
-  .element-class {
+  html, body {
     scrollbar-gutter: stable both-edges;
  }
